tests/snapshots/fix__aligns_ports_on_facing_sides_so_the_connector_stays_straight.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 1,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.09,
  "remainingIssues": 0
}
