tests/snapshots/fix__brings_a_detached_label_back_beside_its_connector-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="target">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <line id="flow" data-from="source" data-to="target" x1="120" y1="48" x2="260" y2="48"/>
        <text data-label="retry" data-label-for="flow" x="190" y="36" text-anchor="middle" font-size="14">Retry</text>
      </svg>
