tests/snapshots/fix__detours_around_connectors_rather_than_crossing_them-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 420">
        <g data-node="a"><rect x="20" y="176" width="100" height="48"/><text x="70" y="205" text-anchor="middle" font-size="14">A</text></g>
        <g data-node="b"><rect x="520" y="176" width="100" height="48"/><text x="570" y="205" text-anchor="middle" font-size="14">B</text></g>
        <g data-node="c1"><rect x="210" y="52" width="100" height="48"/><text x="260" y="81" text-anchor="middle" font-size="14">C1</text></g>
        <g data-node="d1"><rect x="210" y="300" width="100" height="48"/><text x="260" y="329" text-anchor="middle" font-size="14">D1</text></g>
        <g data-node="c2"><rect x="350" y="52" width="100" height="48"/><text x="400" y="81" text-anchor="middle" font-size="14">C2</text></g>
        <g data-node="d2"><rect x="350" y="300" width="100" height="48"/><text x="400" y="329" text-anchor="middle" font-size="14">D2</text></g>
        <path id="first" data-from="c1" data-to="d1" d="M 260 100 L 260 300"/>
        <path id="second" data-from="c2" data-to="d2" d="M 400 100 L 400 300"/>
        <path id="flow" data-from="a" data-to="b" fill="none" d="M 70 176 L 70 44 L 570 44 L 570 176"/>
      </svg>
