tests/snapshots/fix__detours_around_connectors_rather_than_crossing_them.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.13,
  "remainingIssues": 0
}
