tests/snapshots/fix__detours_in_a_parallel_lane_when_both_detour_lanes_are_taken-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        
      <g data-node="west">
        <rect x="-60" y="20" width="60" height="56"/>
        <text x="-30" y="53" text-anchor="middle" font-size="12">W</text>
      </g>
        
      <g data-node="source">
        <rect x="20" y="20" width="100" height="56"/>
        <text x="70" y="53" text-anchor="middle" font-size="12">S</text>
      </g>
        
      <g data-node="obstacle">
        <rect x="150" y="20" width="80" height="56"/>
        <text x="190" y="53" text-anchor="middle" font-size="12">O</text>
      </g>
        
      <g data-node="target">
        <rect x="260" y="20" width="100" height="56"/>
        <text x="310" y="53" text-anchor="middle" font-size="12">T</text>
      </g>
        
      <g data-node="east">
        <rect x="400" y="20" width="60" height="56"/>
        <text x="430" y="53" text-anchor="middle" font-size="12">E</text>
      </g>
        <line id="upper" data-from="west" data-to="east" x1="0" y1="12" x2="400" y2="12"/>
        <line id="lower" data-from="west" data-to="east" x1="0" y1="84" x2="400" y2="84"/>
        <path id="flow" data-from="source" data-to="target" fill="none" d="M 70 20 L 70 2 L 310 2 L 310 20"/>
      </svg>
