tests/snapshots/fix__detours_in_a_parallel_lane_when_both_detour_lanes_are_taken.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 2.81,
  "remainingIssues": 0
}
