tests/snapshots/fix__does_not_reroute_a_connector_onto_another_connector.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.16,
  "remainingIssues": 0
}
