tests/snapshots/fix__does_not_reroute_onto_a_short_segment_between_grid_lines-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="west">
          <rect x="-60" y="-60" width="60" height="40"/>
          <text x="-30" y="-35" text-anchor="middle" font-size="12">W</text>
        </g>
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="obstacle">
          <rect x="150" y="20" width="80" height="56"/>
          <text x="190" y="53" text-anchor="middle" font-size="14">Block</text>
        </g>
        <g data-node="target">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <path id="tick" data-from="west" data-to="target" d="M 0 -40 L 195 -40 L 195 12 L 200 12"/>
        <path id="flow" data-from="source" data-to="target" fill="none" d="M 70 76 L 70 84 L 310 84 L 310 76"/>
      </svg>
