tests/snapshots/fix__does_not_reroute_onto_a_short_segment_between_grid_lines.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 4,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.21,
  "remainingIssues": 0
}
